objects/Lead_Option__c.object
<CustomObject>
    <description>This object should mimic current Option functionality and when the Lead is converted the Option Object should be populated</description>
    <fields>
        <fullName>AK_Lead_Option__c</fullName>
        <description>Concat Lead Id and Manufacturers Code - Not include in Page Layout it’s function is to define uniqueness</description>
        <label>AK Lead Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Number__c</fullName>
        <label>Inventory Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Options</relationshipLabel>
        <relationshipName>Lead_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Option_Name__c</fullName>
        <label>Lead Option Name</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Code__c</fullName>
        <label>Manufacturer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Dealer_Accessory_Price__c</fullName>
        <label>Model Dealer Accessory Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_Type__c</fullName>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Factory Installed Feature</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Amount__c</fullName>
        <label>Price Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Lead Option</label>
    <nameField>
        <label>Lead Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>